# argusflow

./: .gitignore  CLAUDE.md  Cargo.toml
crates/argusflow-cli/: Cargo.toml
crates/argusflow-cli/src/: main.rs
crates/argusflow-cli/src/command/: context.rs  handlers.rs  mod.rs
crates/argusflow-core/: Cargo.toml
crates/argusflow-core/src/: config.rs  lib.rs
crates/argusflow-core/src/citation/: stats.rs
crates/argusflow-core/src/core/: argusflow.rs
crates/argusflow-core/src/db/: mod.rs
crates/argusflow-core/src/db/entity/: paper_authors.rs
crates/argusflow-core/src/db/migration/: m20240101_000003_create_paper_authors.rs  m20240101_000004_create_citations.rs  mod.rs
crates/argusflow-core/src/models/: mod.rs
crates/argusflow-core/src/output/: markdown.rs
crates/argusflow-core/src/source/: manager.rs
docs/superpowers/plans/: 2026-04-06-argusflow-optimization.md
docs/superpowers/specs/: 2026-04-06-argusflow-optimization-design.md
src/: lib.rs  main.rs
src/citation/: crawler.rs  graph.rs  mod.rs  stats.rs
src/command/: context.rs  handlers.rs  mod.rs
src/core/: mod.rs
src/db/: database.rs  mod.rs  sqlite.rs
src/db/entity/: authors.rs  citations.rs  mod.rs  paper_authors.rs  papers.rs
src/db/migration/: m20240101_000001_create_papers.rs  m20240101_000002_create_authors.rs
src/models/: author.rs  paper.rs
src/output/: bibtex.rs  json.rs  markdown.rs  mod.rs  terminal.rs
src/pdf/: downloader.rs  mod.rs
src/source/: arxiv.rs  manager.rs  mod.rs  openalex.rs  semantic_scholar.rs
